<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
>
    <android.opengl.GLSurfaceView
            android:id="@+id/glSurfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <com.google.android.gms.ads.AdView
            android:id="@+id/adViewBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/banner_main"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

        <Button
                android:id="@+id/getFullVersionButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/btn_full_version"/>

        <Button
                android:id="@+id/setWallpaperButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/btn_set_wallpaper"/>

        <Button
                android:id="@+id/setDreamButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:enabled="false"
                android:text="@string/btn_set_screensaver"/>

        <Button
                android:id="@+id/editSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/btn_edit_settings"/>

    </LinearLayout>

</RelativeLayout>
